[project]
name = "pf-mcdr-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.68.0",
    "hjson>=3.1.0",
    "itsdangerous>=2.2.0",
    "javaproperties>=0.8.2",
    "jinja2>=3.1.6",
    "mcdreforged>=2.3.0",
    "mcstatus>=12.2.0",
    "passlib>=1.7.4",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "ruamel-yaml>=0.18.17",
    "starlette>=0.52.1",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.15.0",
]
